methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:11: error: ';' expected but 'else' found.
      else {
      ^