methods.slug.SlugHunting.scala.code
def hunt() {
  while(!estSurBiscuit()) {  
  	if (isFacingTrail()==true) {
    	avance()
    	}
  	else {
      gauche()
    	if (isFacingTrail()==true) {
      	avance()
      else {
        droite();droite()
      }
    }
    }
}}

def isFacingTrail():Boolean = {
    
  if (estFaceMur) {
    return false
  }
  avance()
  if (getCouleurSol()==Color.green){
      recule()
      return true}
  recule
    return false
    
}